add migliorie su css

--- a/css/style.css
+++ b/css/style.css
@@ -13,5 +13,9 @@
 }
 
 .finale{
-    
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: yellow;
+    text-align: center;
+    padding: 20px;
+    font-size: 40px;
 }
