--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,22 @@
     box-sizing: border-box;
 }
 
+nav{
+    height: 20px;
+    width: 100%;
+    text-align: center;
+    padding: 20px;
+    vertical-align: middle;
+}
+
+a{
+    text-decoration: none;
+    font-size: 20px;
+    text-transform: uppercase;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-left: 40px;
+}
+
 .generatore{
     font-family: Arial, Helvetica, sans-serif;
     background-color: aquamarine;
