--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,13 @@
     box-sizing: border-box;
 }
 
-nav{
-    height: 20px;
+.navigazione{
+    margin: auto;
     width: 100%;
+    padding: 10px;
+    height: 45px;
     text-align: center;
-    padding: 20px;
-    vertical-align: middle;
+    background-color: rgb(248, 130, 109);
 }
 
 a{
@@ -18,6 +19,10 @@ a{
     text-transform: uppercase;
     font-family: Arial, Helvetica, sans-serif;
     margin-left: 40px;
+}
+
+a:hover{
+    border-bottom: 3px solid darkcyan;
 }
 
 .generatore{
